force-app/main/default/objects/hed__Test_Score__c/hed__Test_Score__c.object-meta.xml
<CustomObject>
    <description>The score on a section of a specific test or a composite score.</description>
    <label>Test Score</label>
    <nameField>
        <displayFormat>SCR-{0000}</displayFormat>
        <label>Test Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>