force-app/main/default/objects/hed__Test_Score__c/fields/Correct_Questions__c.field-meta.xml
<CustomField>
    <fullName>Correct_Questions__c</fullName>
    <formula>ROUND(Score_Percentage__c * Section_Percentage__c * hed__Test__r.Number_of_Questions__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correct Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>