force-app/main/default/objects/hed__Test_Score__c/fields/hed__Credentialing_Identifier__c.field-meta.xml
<CustomField>
    <fullName>hed__Credentialing_Identifier__c</fullName>
    <description
  >An International Resource Identifier that uniquely identifies this credential.</description>
    <externalId>true</externalId>
    <inlineHelpText
  >An International Resource Identifier that uniquely identifies this credential.</inlineHelpText>
    <label>Credentialing Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>