force-app/main/default/objects/hed__Test_Score__c/fields/hed__Letter_Score__c.field-meta.xml
<CustomField>
    <fullName>hed__Letter_Score__c</fullName>
    <description>The letter grade achieved on the Test.</description>
    <inlineHelpText>The letter grade achieved on the Test.</inlineHelpText>
    <label>Letter Score</label>
    <length>80</length>
    <type>Text</type>
</CustomField>