force-app/main/default/objects/hed__Test_Score__c/fields/hed__Status__c.field-meta.xml
<CustomField>
    <fullName>hed__Status__c</fullName>
    <description>The status of the Test Score. For example, In Progress or Completed.</description>
    <inlineHelpText>The status of the Test Score. For example, In Progress or Completed.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <isActive>false</isActive>
                <label>On Hold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>