force-app/main/default/objects/hed__Test_Score__c/fields/hed__Subject_Area__c.field-meta.xml
<CustomField>
    <fullName>hed__Subject_Area__c</fullName>
    <description
  >The subject matter or category for this test score.</description>
    <inlineHelpText
  >The subject matter or category for this test score.</inlineHelpText>
    <label>Subject Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Language</fullName>
            </value>
            <value>
                <fullName>Mathematics</fullName>
            </value>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Writing</fullName>
            </value>
            <value>
                <fullName>Overall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>