force-app/main/default/objects/hed__Test_Score__c/fields/Score_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Score_Percentage__c</fullName>
    <inlineHelpText>The percent scored in this section</inlineHelpText>
    <label>Score Percentage</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>