force-app/main/default/objects/hed__Test_Score__c/fields/Section_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Section_Percentage__c</fullName>
    <inlineHelpText>Enter the section percentage of the total exam according to the exam guide</inlineHelpText>
    <label>Section Percentage</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>