force-app/main/default/objects/hed__Test_Score__c/fields/Subject_Area__c.field-meta.xml
<CustomField>
    <fullName>Subject_Area__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>