force-app/main/default/objects/hed__Test_Score__c/listViews/hed__All.listView-meta.xml
<ListView>
    <fullName>hed__All</fullName>
    <columns>NAME</columns>
    <columns>hed__Test__c</columns>
    <columns>Subject_Area__c</columns>
    <columns>Section_Percentage__c</columns>
    <columns>Score_Percentage__c</columns>
    <columns>Correct_Questions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>